[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Music/Forr√≥ Estilizado.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Music/Sertanejo.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scripts/MusicController.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/Rock.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/Samba.mp3" type="AudioStream" id=5]

[node name="MusicController" type="Node2D"]
script = ExtResource( 3 )

[node name="ForroAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -30.0

[node name="SertanejoAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0

[node name="RockAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="SambaAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0
